--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
           cd /home/ubuntu/cicd/test
           git pull origin main
           source venv/bin/activate
-          pip install -r requirements.txt
-          sudo systemctl restart myapp
+          pip install flask
+          sudo systemctl restart myappgit
         EOF
