--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Dependencies & Run Tests
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install flask
         pytest tests/
 
     - name: Deploy to AWS EC2
